--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -28,7 +28,7 @@
             </div>
         <%}%>
         
-        <img src="img/Brain.svg" alt="" class="brain" height="200" ">
+        <img src="img/MemoryMate.png" alt="" class="brain" height="300" ">
         <br>
         <h2 >Welcome to NeuralAid!</h2>
 
