--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -30,27 +30,27 @@
             <div class="grid-container">
                 <a href="/news" class="home-box">
                     <img src="img/news.png" alt="">
-                    <h3>News</h3>
+                    <h3>EQ Test😃</h3>
                 </a>
                 <a href="/games" class="home-box">
                     <img src="img/games.png" alt="">
-                    <h3>Games</h3>
+                    <h3>Mind Stimulating Games🎮</h3>
                 </a>
                 <a class="home-box" href="/circle">
                     <img src="img/circle.png" alt="">
-                    <h3>Circle</h3>
+                    <h3>My Circle👪</h3>
                 </a>
                 <a class="home-box" href="/video">
                     <img src="img/identify.png" alt="">
-                    <h3>Identify</h3>
+                    <h3>Identify🧑</h3>
                 </a>
                 <a href="/events" class="home-box">
                     <img src="img/reminder.png" alt="">
-                    <h3>Reminders</h3>
+                    <h3>Reminders⏰</h3>
                 </a>
                 <a href="/entertainment" class="home-box">
                     <img src="img/entertainment.png" alt="">
-                    <h3>Entertain</h3>
+                    <h3>Chat Mate🗣️</h3>
                 </a>
                 
 
