--- a/views/newsapp/newspage.ejs
+++ b/views/newsapp/newspage.ejs
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/3808de5cb1.js" crossorigin="anonymous"></script>
 
-  <title>News & Mood Tracking</title>
+  <title>EQ Test😃</title>
 
   <style>
     body {
@@ -124,7 +124,7 @@
     <a href="/home">
       <img src="/img/back.png" alt="" height="40px">
     </a>
-    <h3>News & Mood Tracker</h3>
+    <h3>EQ Test😃</h3>
     <a href="news/configure" class="settings">
       <i class="fas fa-cog fa-2x"></i>
     </a>
